Start of HTML/CSS

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Title for the blog</title>
-</head>
-<body>
-<h1>Blog heading</h1>
-</body>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
+    <title>HTML/CSS Learning Website</title>
+  </head>
+  
+  <h1>
+    TESTING
+  </h1>
+  
 </html>
