--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="vendor/css/grid.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
     <title>HTML/CSS Learning Website</title>
   </head>
+   <header>
+    <div class="hero-text-box">
+      <h1>Goodbye junk food. Hello super healthy meals.</h1>
+      <a href="#">I'm hungry</a>
+      <a href="#">Show me more</a>
+     </div>
   
-  <h1>
-    TESTING
-  </h1>
+  
+  </header>
   
 </html>
