--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
    <header>
     <div class="hero-text-box">
-      <h1>Goodbye junk food. Hello super healthy meals.</h1>
-      <a href="#">I'm hungry</a>
-      <a href="#">Show me more</a>
+      <h1>GOODBYE JUNK FOOD. <BR> WELCOME SUPER HEALTHY MEALS./h1>
+      <a class="btn1" href="#">I'm hungry</a>
+      <a class="btn2" href="#">Show me more</a>
      </div>
   
   
