--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <header>
     <div class="hero-text-box">
       <h1>GOODBYE JUNK FOOD. <BR> WELCOME SUPER HEALTHY MEALS.</h1>
-      <a class="btn1" href="#">I'm hungry</a>
-      <a class="btn2" href="#">Show me more</a>
+      <a class="btn btn1" href="#">I'm hungry</a>
+      <a class="btn btn2" href="#">Show me more</a>
      </div>
   
   
