--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
     <title>HTML/CSS Learning Website</title>
   </head>
    <header>
-    <div class="hero-text-box">
-      <h1>GOODBYE JUNK FOOD. <BR> WELCOME SUPER HEALTHY MEALS.</h1>
-      <a class="btn btn1" href="#">I'm hungry</a>
-      <a class="btn btn2" href="#">Show me more</a>
-     </div>
+    <nav>
+      <div class="row">
+        <img src="img/logo-white.png" alt ="Website logo" class ="logo">
+        <ul class="main-nav">
+          <li><a href="#">Food Delivery</a></li>
+          <li><a href="#">How it Works</a></li>
+          <li><a href="#">Our Cities</a></li>
+        </ul>
+      </div>
+    </nav>
+      <div class="hero-text-box">
+        <h1>GOODBYE JUNK FOOD. <BR> WELCOME SUPER HEALTHY MEALS.</h1>
+        <a class="btn btn1" href="#">I'm hungry</a>
+        <a class="btn btn2" href="#">Show me more</a>
+       </div>
   
   
   </header>
