--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <header>
     <nav>
       <div class="row">
-        <img src="img/logo-white.png" alt ="Website logo" class ="logo">
+        <img src="img/logo.png" alt ="Website logo" class ="logo">
         <ul class="main-nav">
           <li><a href="#">Food Delivery</a></li>
           <li><a href="#">How it Works</a></li>
