--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </header>
   <section class ="features">
     <div class="row">
-      <h2>Get food fast &mdash; not fast food.</h2>
+      <h2>Get food fast &mdash; not fast food</h2>
       <p class="long-p">
 Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
       </p>
