--- a/index.html
+++ b/index.html
@@ -34,32 +34,78 @@ Hello, we are Omnifood, your new premium food delivery service. We know you are 
       </p>
     </div>
     <div class="row">
-      <div class="col span-1-of-4">
-        <i class="ion-ios-infinite"></i>
+      <div class="col span-1-of-4 box">
+        <i class="ion-ios-infinite big"></i>
            <h3>Up to 365 days/year</h3> 
            <p>Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
         </p>
         </div>
-      <div class="col span-1-of-4">
-        <i class="ion-ios-clock-outline"></i>
+      <div class="col span-1-of-4 box">
+        <i class="ion-ios-clock-outline big"></i>
         <h3>Ready in 20 minutes</h3> 
            <p>You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
         </p>        
         </div>
-      <div class="col span-1-of-4">
-        <i class="ion-leaf"></i>
+      <div class="col span-1-of-4 box">
+        <i class="ion-leaf big"></i>
   <h3>100% Organic</h3> 
            <p>
 All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
         </p>
         </div>
-            <div class="col span-1-of-4">
-              <i class="ion-android-hand"></i>
+            <div class="col span-1-of-4 box">
+              <i class="ion-android-hand big"></i>
 <h3>Order Anything        </h3>           
         <p>
 We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
         </p>
       </div>
     </div>
+     </section>
+     <section class="meals">
+      <ul class="meals-showcase">
+        <li>
+        <figure>
+          <img src="img/1.jpg" alt="1.	Korean bibimbap with egg and vegetables">
+          </figure>
+       </li>
+        <li>
+        <figure>
+          <img src="img/2.jpg" alt="2.	Simple italian pizza with cherry tomatoes ">
+          </figure>
+       </li>
+        <li>
+        <figure>
+          <img src="img/3.jpg" alt="3.	Chicken breast steak with vegetables">
+          </figure>
+       </li>
+        <li>
+        <figure>
+          <img src="img/4.jpg" alt="4.	Autumn pumpkin soup">
+          </figure>
+       </li>
+       </ul>
+     <ul class="meals-showcase">
+        <li>
+        <figure>
+          <img src="img/5.jpg" alt="5.	Paleo beef steak with vegetables">
+          </figure>
+       </li>
+        <li>
+        <figure>
+          <img src="img/6.jpg" alt="6.	Healthy baguette with egg and vegetables">
+          </figure>
+       </li>
+        <li>
+        <figure>
+          <img src="img/7.jpg" alt="7.	Burger with cheddar and bacon">
+          </figure>
+       </li>
+        <li>
+        <figure>
+          <img src="img/8.jpg" alt="8.	Granola with cherries and strawberries">
+          </figure>
+       </li>
+       </ul>
      </section>
 </html>
