--- a/index.html
+++ b/index.html
@@ -65,44 +65,44 @@ We don't limit your creativity, which means you can order whatever you feel like
      <section class="meals">
       <ul class="meals-showcase">
         <li>
-        <figure>
+        <figure class="meal-photo">
           <img src="img/1.jpg" alt="1.	Korean bibimbap with egg and vegetables">
           </figure>
        </li>
         <li>
-        <figure>
+        <figure class="meal-photo">
           <img src="img/2.jpg" alt="2.	Simple italian pizza with cherry tomatoes ">
           </figure>
        </li>
         <li>
-        <figure>
+        <figure class="meal-photo">
           <img src="img/3.jpg" alt="3.	Chicken breast steak with vegetables">
           </figure>
        </li>
         <li>
-        <figure>
+        <figure class="meal-photo">
           <img src="img/4.jpg" alt="4.	Autumn pumpkin soup">
           </figure>
        </li>
        </ul>
      <ul class="meals-showcase">
         <li>
-        <figure>
+        <figure class="meal-photo">
           <img src="img/5.jpg" alt="5.	Paleo beef steak with vegetables">
           </figure>
        </li>
         <li>
-        <figure>
+        <figure class="meal-photo">
           <img src="img/6.jpg" alt="6.	Healthy baguette with egg and vegetables">
           </figure>
        </li>
         <li>
-        <figure>
+        <figure class="meal-photo">
           <img src="img/7.jpg" alt="7.	Burger with cheddar and bacon">
           </figure>
        </li>
         <li>
-        <figure>
+        <figure class="meal-photo">
           <img src="img/8.jpg" alt="8.	Granola with cherries and strawberries">
           </figure>
        </li>
