--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ We don't limit your creativity, which means you can order whatever you feel like
     </div>
      </section>
      <section class="meals">
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
         <figure class="meal-photo">
           <img src="img/1.jpg" alt="1.	Korean bibimbap with egg and vegetables">
@@ -85,7 +85,7 @@ We don't limit your creativity, which means you can order whatever you feel like
           </figure>
        </li>
        </ul>
-     <ul class="meals-showcase">
+     <ul class="meals-showcase clearfix">
         <li>
         <figure class="meal-photo">
           <img src="img/5.jpg" alt="5.	Paleo beef steak with vegetables">
@@ -108,4 +108,122 @@ We don't limit your creativity, which means you can order whatever you feel like
        </li>
        </ul>
      </section>
+     <section class="how-it-works">
+     <div class="row">
+        <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+       </div>
+     <div class="row">
+       <div class="col span-1-of-2 step-box">
+           <img src="img/app-iPhone.png" alt="Phone photo" class="phone-photo">
+         </div>
+       <div class="col span-1-of-2 step-box">
+         <div class="work-steps">
+         <div>1</div>
+         <p>
+           Choose the subscription plan that best fits your needs and sign up today.
+         </p>
+         </div>
+<div class="work-steps">
+         <div>
+           2
+         </div>
+         <p>
+           Order your delicious meal using our mobile app or website. Or you can even call us!
+         </p>
+         </div>
+         <div class="work-steps">
+         <div>
+           3
+         </div>
+         <p>
+           Enjoy your meal after less than 20 minutes. See you the next time!
+           </p></div>
+         <div class="phone-btn">
+           <a href="#"><img src="img/download-app-android.png" alt="Play store"></a>
+           <a href="#"><img src="img/download-app.svg" alt="App Store"></a>
+         </div>
+       </div>
+     </section>
+       <section class="our-cities">
+         <div class="row">
+           <h2>
+             We're currently in these cities
+           </h2>
+         </div>
+         <div class="row">
+           <div class="col span-1-of-4 box">
+             <img src="img/lisbon-3.jpg" alt="Lisbon">
+               <h3>
+                 Lisbon
+               </h3>
+             <div class="cities">
+               <i class="ion-ios-wineglass small"  ></i>
+               1600+ Eaters
+             </div>
+             <div class="cities">
+               <i class="ion-ios-star-half small"  ></i>
+               60+ top chefs
+             </div>
+             <div class="cities">
+               <i class="ion-social-twitter small"  ></i>
+               <a href="#">@omnifood_lx</a>
+             </div>
+           </div>
+                      <div class="col span-1-of-4 box">
+             <img src="img/berlin.jpg" alt="Berlin">
+               <h3>
+                 Berlin
+               </h3>
+             <div class="cities">
+               <i class="ion-ios-wineglass small"></i>
+               2300+ Eaters
+             </div>
+             <div class="cities">
+               <i class="ion-ios-star-half small"  ></i>
+               110+ top chefs
+             </div>
+             <div class="cities">
+               <i class="ion-social-twitter small"  ></i>
+               <a href="#"> @omnifood_berlin</a>
+             </div>
+           </div>
+                      <div class="col span-1-of-4 box">
+             <img src="img/san-francisco.jpg" alt="San Francisco">
+               <h3>
+                 San Francisco
+               </h3>
+             <div class="cities">
+               <i class="ion-ios-wineglass small"  ></i>
+               3700+ Eaters
+             </div>
+             <div class="cities">
+               <i class="ion-social-twitter small"  ></i>
+               160+ top chefs
+             </div>
+             <div class="cities">
+               <i class="ion-social-twitter small"  ></i>
+               <a href="#">@omnifood_sf</a>
+             </div>
+           </div>
+                      <div class="col span-1-of-4 box">
+             <img src="img/london.jpg" alt="London"  >
+               <h3>
+                 London
+               </h3>
+             <div class="cities">
+               <i class="ion-ios-wineglass small"  ></i>
+               1200+ Eaters
+             </div>
+             <div class="cities">
+               <i class="ion-ios-star-half small"  ></i>
+               50+ top chefs
+             </div>
+             <div class="cities">
+               <i class="ion-social-twitter small"  ></i>
+               <a href="#">@omnifood_london</a>
+             </div>
+           </div>
+         </div>
+         
+         </section>
 </html>
