--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" type="text/css" href="vendor/css/ionicons.min.css">
 <link rel="stylesheet" type="text/css" href="vendor/css/grid.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
+
+	
 <title>HTML/CSS Learning Website</title>
 </head>
 
@@ -25,7 +26,7 @@
       WELCOME SUPER HEALTHY MEALS.</h1>
     <a class="btn btn1" href="#">I'm hungry</a> <a class="btn btn2" href="#">Show me more</a> </div>
 </header>
-<section class="features js--features">
+<section class="features js-sticky">
   <div class="row">
     <h2>Get food fast &mdash; not fast food</h2>
     <p class="long-p"> Hello, we are Omnifood, your new premium food delivery service. We know you are always busy. No time for cooking. So let us take care of that, we are really good at it, we promise! </p>
@@ -274,23 +275,8 @@
 </section>
 <footer>
 	<div class="row">
-		<div class="col span-1-of-2">
-			<ul class="foot-nav">
-				<li><a href="#">About US</a></li>
-				<li><a href="#">Press</a></li>
-				<li><a href="#">Carrers</a></li>
-				<li><a href="#">Apps</a></li>
-			</ul>
-		</div>
-		<div class="col span-1-of-2 social-icons">
-		   <ul class="social-icons">
-			    <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-                        <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                        <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-                        <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-			</ul>
-		</div>
-	</div>
+		
+		
 	<div class="row">
 		<p>This webpage was created for Stipo Margic CMS project! With JS Design. &copy; 2018.  <br> <br>
 
@@ -298,8 +284,12 @@
 </p>
 	</div>
 </footer>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="vendor/js/jquery.waypoints.min.js"></script>
-<script src="js/script.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+    <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
+    <script src="vendor/js/jquery.waypoints.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
